# claude-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: cowork-mcp-config.json
examples/devcontainer/: Dockerfile  devcontainer.json
src/claude_bridge/: __init__.py  dispatcher.py  server.py
tests/: conftest.py  test_dispatcher.py  test_server.py
