[project]
name = "claude-bridge"
version = "0.1.0"
description = "MCP server that bridges host-side Claude Cowork to Claude Code running inside a devcontainer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
claude-bridge = "claude_bridge.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
